# smipc

./: .clang-format  .gitignore  .justfile  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.sh  datatype-schema.json  service-schema.json  vcpkg.json
.github/workflows/: benchmark.yml  cmake-multi-platform.yml
doc/: design_notes.md
docs/: design_notes.md
examples/: base.datatypes.json  datatype-schema.json  example.service.json  generated_cpp.h  math.service.json  service-schema.json
libs/client_test/: CMakeLists.txt
libs/client_test/src/: main.cpp
libs/fifo/: CMakeLists.txt  CMakePresets.json
libs/fifo/include/ring_buffer/: atomic_spin_lock.h  dekkar_lock.h
libs/fifo/src/: main.cpp
libs/ring_buffer/: CMakeLists.txt  packet.h
libs/ring_buffer/include/ring_buffer/: atomic_spin_lock.h  dekkar_lock.h  ring_buffer.h  ring_buffer_rx.h  ring_buffer_tx.h
libs/ring_buffer/src/: atomic_spin_lock.h  ring_buffer.h
libs/ring_buffer/test/: CMakeLists.txt  main.cpp
libs/ring_buffer/test/benchmarks/: CMakeLists.txt  benchmark.cpp
libs/ring_buffer/test/unit-tests/: CMakeLists.txt  unit_test.cpp
libs/serdes/: CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json
libs/serdes/include/serdes/: serdes.h
libs/serdes/src/: calculate_actual_size.h  calculate_minimum_size.h  check_dynamicism.h  concepts.h  deserialise.h  main.cpp  operator.h  serialisable.h  serialise.h  variable_integer.h
libs/serdes/test/: CMakeLists.txt  benchmark.cpp  unit_test.cpp
libs/serdes/test/benchmarks/: CMakeLists.txt  benchmark.cpp
libs/serdes/test/unit-tests/: CMakeLists.txt  unit_test.cpp
libs/server_test/: CMakeLists.txt
libs/server_test/src/: main.cpp
libs/shared_memory/: CMakeLists.txt
libs/shared_memory/include/smipc/: client.h  server.h
libs/shared_memory/src/: atomic_memory_view.h  atomic_spin_lock.h  client.cpp  duplex_shared_memory_file.cpp  duplex_shared_memory_file.h  posix_shared_memory_file.cpp  server.cpp  shared_memory_file.h  shared_memory_layout.h  windows_shared_memory_file.cpp
libs/smipc/: CMakeLists.txt
libs/smipc/include/smipc/: client.h  server.h
libs/smipc/src/: abstract_shared_memory_file.cpp  abstract_shared_memory_file.h  client.cpp  duplex_shared_memory_file.cpp  duplex_shared_memory_file.h  server.cpp  shared_memory_layout.h  windows_shared_memory_file.cpp  windows_shared_memory_file.h
libs/test_app/: CMakeLists.txt  main.cpp
libsmipc/: CMakeLists.txt  datatype-schema.json  example.service.json  service-schema.json
libsmipc/libsmipc/: channel.hpp  client-channel.hpp  client.hpp  server-channel.hpp  server.hpp
libsmipc/libsmipc/ring-buffer/: atomic-spin-lock.cpp  atomic-spin-lock.hpp  dekkar-lock.cpp  dekkar-lock.hpp  packet.hpp  ring-buffer-rx.hpp  ring-buffer-tx.hpp  ring-buffer.benchmark.cpp  ring-buffer.cpp  ring-buffer.hpp  ring-buffer.test.cpp  rx-ring-buffer.cpp  rx-ring-buffer.hpp  tx-ring-buffer.cpp  tx-ring-buffer.hpp
libsmipc/libsmipc/serdes/: calculate-actual-size.hpp  calculate-minimum-size.hpp  check-dynamicism.hpp  concepts.hpp  deserialise.hpp  operator.hpp  serdes.benchmark.cpp  serdes.hpp  serdes.test.cpp  serialisable.hpp  serialise.hpp  variable-integer.hpp
libsmipc/libsmipc/shared-memory/: abstract-shared-memory.hpp  atomic-memory-view.hpp  atomic-spin-lock.hpp  client.cpp  client.hpp  duplex-shared-memory-file.cpp  duplex-shared-memory-file.hpp  pipe-client.hpp  pipe-connection.hpp  pipe-server.hpp  posix-shared-memory-file.cpp  rx-shared-memory-pipe.hpp  server.cpp  server.hpp  shared-memory-factory.cpp  shared-memory-factory.hpp  shared-memory-file.hpp  shared-memory-layout.hpp  shared-memory-pipe-rx.hpp  shared-memory-pipe-tx.hpp  shared-memory-pipe.hpp  shared-memory-view.hpp  shared-memory.test.cpp  tx-shared-memory-pipe.hpp  windows-shared-memory-file.cpp  windows-shared-memory.cpp  windows-shared-memory.hpp
libsmipc/libsmipc/shared-memory/platform/: intime-shared-memory.cpp  intime-shared-memory.hpp  posix-shared-memory.cpp  posix-shared-memory.hpp  windows-shared-memory.cpp  windows-shared-memory.hpp
smipcc/: CMakeLists.txt
smipcc/smipcc/: main.cpp
src/: CMakeLists.txt
src/ring_buffer/: atomic_spin_lock.cpp  dekkar_lock.cpp  packet.h  ring_buffer.h  ring_buffer_rx.h  ring_buffer_tx.h
src/serdes/: calculate_actual_size.h  calculate_minimum_size.h  check_dynamicism.h  deserialise.h  operator.h  serialise.h
src/shared_memory/: atomic_memory_view.h  client.cpp  posix_shared_memory_file.cpp  server.cpp  shared_memory_file.h
test/: benchmark_history.json  serdes_benchmark_history.json
test/benchmarks/: CMakeLists.txt
test/benchmarks/ring_buffer/: CMakeLists.txt  ring_buffer_bench.cpp
test/benchmarks/serdes/: CMakeLists.txt  serdes_bench.cpp
test/client-test/: CMakeLists.txt  main.cpp
test/server-test/: CMakeLists.txt  main.cpp
test/test-app/: main.cpp
test/unit-tests/: CMakeLists.txt
test/unit-tests/ring_buffer/: CMakeLists.txt  ring_buffer_unit.cpp
test/unit-tests/serdes/: CMakeLists.txt  serdes_unit.cpp
tests/: serdes_benchmark_history.json
tests/client-test/: CMakeLists.txt  main.cpp
tests/server-test/: CMakeLists.txt  main.cpp
tests/test-app/: CMakeLists.txt  main.cpp
