# CMakeList.txt : CMake project for shared_memory_experiments, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.28)

# Enable Hot Reload for MSVC compilers if supported.
if (POLICY CMP0141)
  cmake_policy(SET CMP0141 NEW)
  set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
endif()

project ("client_test")

# Add source to this project's executable.
add_executable(client_test "src/main.cpp")
target_include_directories(client_test PRIVATE
	"include"
	"${CMAKE_SOURCE_DIR}/libs/smipc/include"
)

target_link_libraries(client_test PRIVATE smipc)

set_property(TARGET client_test PROPERTY CXX_STANDARD 20)

# TODO: Add tests and install targets if needed.
